force-app/main/default/objects/Monthly_Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Service Tax</fullName>
            </value>
            <value>
                <fullName>Joining Bonus</fullName>
            </value>
            <value>
                <fullName>Recruitment Allowances</fullName>
            </value>
            <value>
                <fullName>Petrol Allowances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>