force-app/main/default/objects/Monthly_Expense__c/fields/Finance_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Finance_Expense_Amount__c</fullName>
    <label>Finance Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>