force-app/main/default/objects/Monthly_Expense__c/fields/HR_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>HR_Expense_Amount__c</fullName>
    <label>HR Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>