force-app/main/default/objects/Monthly_Expense__c/recordTypes/RT_for_Financial_Dept.recordType-meta.xml
<RecordType>
    <fullName>RT_for_Financial_Dept</fullName>
    <active>true</active>
    <description>Record Type for Financial Dept</description>
    <label>RT for Financial Dept</label>
</RecordType>