force-app/main/default/objects/Monthly_Expense__c/recordTypes/RT_for_HR_Dept.recordType-meta.xml
<RecordType>
    <fullName>RT_for_HR_Dept</fullName>
    <active>true</active>
    <description>Record Type for HR Dept</description>
    <label>RT for HR Dept</label>
</RecordType>